Made scene dirty when spawning manager or adding component via tool window

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /[Mm]emoryCaptures/
 /[Ss]witchIL2CPPCache/
 /[Ss]witchIL2CPPStats/
+/[Bb]uilds/
 
 /[Pp]rojectSettings/Packages/com.unity.probuilder/Settings.json
 /[Pp]rojectSettings/Packages/com.unity.probuilder*
